<resources>
    <string name="app_name">CommunityApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_event_txted_short">Short description of your event</string>
    <string name="create_event_txted_long">An in depth description of your event</string>
    <string name="create_event_Btn">CREATE EVENT</string>

    <string-array name="tags">
        <item>@string/tags_job</item>
        <item>@string/tags_coop</item>
        <item>@string/tags_pro</item>
    </string-array>
    <string-array name="categories">
        <item>@string/cat_build</item>
        <item>@string/cat_clean</item>
        <item>@string/cat_maintenance</item>
        <item>@string/cat_trash</item>
        <item>@string/cat_log</item>
    </string-array>
    <string-array name="Time_duration">
        <item>@string/time_hour</item>
        <item>@string/time_afternoon</item>
        <item>@string/time_weekend</item>
        <item>@string/time_shortproject</item>
        <item>@string/time_longproject</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_create">Create</string>
    <string name="action_map">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btn_get_txt">Add change listener</string>
    <string name="btn_submit">submit txt to firebase db</string>
    <string name="btn_upload">upload issueImage to firebase storage</string>
    <string name="btn_img">select issueImage from phone</string>
    <string name="title_activity_firebase_create_event_test_temp">
        FirebaseCreateEventTestTempActivity
    </string>
    <string name="select_picture_title">Select Picture</string>
    <string name="choose_image">Choose a crappy image</string>
    <string name="noticication_channel_description">Lorterøv</string>
    <string name="noticication_channel_name">Lorterøv</string>
    <string name="wait_location_message">We have not been able to get a location. Please wait for your device to updater and try again</string>
    <string name="wait_location_title">No location :(</string>
    <string name="no_location_permission_message">This app requires permission to function. If you do not give us permission to access your location this app will not function</string>
    <string name="no_location_permission_title">Are you really sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image_compression_error">Image not working loads of badness</string>
    <string name="cat_build">Build</string>
    <string name="tags_job">One man job</string>
    <string name="tags_coop">Coop event</string>
    <string name="tags_pro">Professional service</string>
    <string name="cat_clean">Clean</string>
    <string name="cat_maintenance">Maintenance</string>
    <string name="cat_trash">Trash</string>
    <string name="cat_log">Logistics</string>
    <string name="time_hour">An hour</string>
    <string name="time_afternoon">Afternoon</string>
    <string name="time_weekend">Weekend</string>
    <string name="time_shortproject">Short project</string>
    <string name="time_longproject">Long spanning project</string>
</resources>
