<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dom.communityapp.FirebaseCreateEventTestTempActivity">

    <ScrollView
        android:layout_width="357dp"
        android:layout_height="454dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="0dp">

            <ImageView
                android:id="@+id/imageview_event2"
                android:layout_width="match_parent"
                android:layout_height="227dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edittext_short_description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_event_txted_short"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/edittext_long_description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_event_txted_long"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                android:singleLine="false" />

            <Spinner
                android:id="@+id/spinner_tags2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:minWidth="20dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/textView_Long_description2"
                app:layout_constraintStart_toStartOf="@+id/textView_Long_description2"
                app:layout_constraintTop_toBottomOf="@+id/textView_Long_description2" />

            <Spinner
                android:id="@+id/spinner_categories2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:tooltipText="'dumt'"
                android:visibility="visible"

                tools:layout_editor_absoluteX="217dp"
                tools:layout_editor_absoluteY="289dp" />

            <Spinner
                android:id="@+id/spinner_time_required2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:tooltipText="select"
                android:visibility="visible" />

            <Button
                android:id="@+id/create_event_button_OK2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/create_event_Btn" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView_create_event2"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
