<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/createeventactivity"
    tools:context="com.dom.communityapp.CreateEventActivity">

    <android.support.design.widget.NavigationView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        app:menu="@menu/navigation"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_navigation">
    </android.support.design.widget.NavigationView>


    <ScrollView
        android:layout_width="357dp"
        android:layout_height="454dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="0dp">

            <ImageView
                android:id="@+id/imageview_event"
                android:layout_width="match_parent"
                android:layout_height="227dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edittext_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_event_txted_short"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/edittext_long_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_event_txted_long"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                android:singleLine="false" />

            <Spinner
                android:id="@+id/spinner_tags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:minWidth="20dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/textView_Long_description"
                app:layout_constraintStart_toStartOf="@+id/textView_Long_description"
                app:layout_constraintTop_toBottomOf="@+id/textView_Long_description" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:tooltipText="'dumt'"
                android:visibility="visible"

                tools:layout_editor_absoluteX="217dp"
                tools:layout_editor_absoluteY="289dp" />

            <Spinner
                android:id="@+id/spinner_time_required"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:tooltipText="select"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_OK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/create_event_Btn" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView_create_event"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>
